added an extra padding value

--- a/public/css/helper.css
+++ b/public/css/helper.css
@@ -1373,7 +1373,7 @@
 .p-l-148 {padding-left: 148px!important;}
 .p-l-149 {padding-left: 149px!important;}
 .p-l-150 {padding-left: 150px!important;}
-
+.p-l-200 {padding-left: 200px!important;}
 
 /* Width percentage*/
 
