--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1547,6 +1547,9 @@ footer p {
 .stat-widget-one .stat-icon {
   vertical-align: top;
 }
+.stat-icon{
+  background-color:#bd2130 ;
+}
 .stat-widget-one .stat-icon i {
   font-size: 30px;
   border-width: 3px;
@@ -10012,3 +10015,4 @@ only screen and (min-resolution: 2dppx) {
 #footer {
   background-color: #000000;
 }
+
