--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -408,7 +408,7 @@ body {
     color: #01A0C6;
 }
 
-.fa-trash {
+.fa-trash-can {
     color: #EC3C37;
 }
 
@@ -435,6 +435,10 @@ body {
 }
 
 /*-------------Sidebar------------*/
+#l {
+    background-color: #F0CD13;
+}
+
 #mySideBar {
     height: 100%;
     width: 0;
@@ -449,9 +453,10 @@ body {
 }
 
 #mySideBar a {
+    position: relative;
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 15px;
     color: #818181;
     display: block;
     transition: 0.3s;
