--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -588,3 +588,8 @@ body {
 .input-focus:focus {
     border-color: #5873fe;
 }
+
+/*-------------alerts---------------*/
+.alert {
+    height: 50px;
+}
