--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3427,7 +3427,7 @@ tbody tr td:last-child {
 }
 
 .login-logo span {
-  color: #ffffff;
+  color: #000000;
   font-size: 24px;
 }
 
@@ -10973,7 +10973,7 @@ only screen and (min-resolution: 2dppx) {
   background-color: #cd201f;
 }
 
-.fa-paw {
+.fa-paw { 
   color: #000000;
 }
 
